<resources>
    <string name="app_name">Navigation_Bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vishal Roy</string>
    <string name="nav_header_subtitle">vishalroy34@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_speed">Speed</string>
    <string name="menu_music">Music</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_battery">Battery</string>
    <string name="menu_reverse_parking">Reverse Parking</string>
    <string name="menu_trip_Summary">Trip Summary</string>
    <string name="menu_emergency_contact">Emergency Contact</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
</resources>